--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "http-proxy",
-  "version": "1.18.1",
+  "name": "@arcblock/http-proxy",
+  "version": "1.19.1",
   "repository": {
     "type": "git",
-    "url": "https://github.com/http-party/node-http-proxy.git"
+    "url": "https://github.com/arcblock/node-http-proxy.git"
   },
   "description": "HTTP proxying for the masses",
   "author": "Charlie Robbins <charlie.robbins@gmail.com>",
@@ -11,31 +11,35 @@
     "jcrugzz <jcrugzz@gmail.com>"
   ],
   "main": "index.js",
+  "publishConfig": {
+    "access": "public"
+  },
+  "files": ["lib"],
   "dependencies": {
-    "eventemitter3": "^4.0.0",
+    "eventemitter3": "^5.0.1",
     "requires-port": "^1.0.0",
-    "follow-redirects": "^1.0.0"
+    "follow-redirects": "^1.15.2"
   },
   "devDependencies": {
-    "async": "^3.0.0",
-    "auto-changelog": "^1.15.0",
+    "async": "^3.2.4",
+    "auto-changelog": "^2.4.0",
     "concat-stream": "^2.0.0",
     "expect.js": "~0.3.1",
-    "mocha": "^3.5.3",
-    "nyc": "^14.0.0",
-    "semver": "^5.0.3",
-    "socket.io": "^2.1.0",
-    "socket.io-client": "^2.1.0",
+    "mocha": "^10.2.0",
+    "nyc": "^15.1.0",
+    "semver": "^7.5.1",
+    "socket.io": "^4.6.1",
+    "socket.io-client": "^4.6.1",
     "sse": "0.0.8",
-    "ws": "^3.0.0"
+    "ws": "^8.13.0"
   },
   "scripts": {
-    "mocha": "mocha test/*-test.js",
+    "mocha": "mocha test/*-test.js --exit",
     "test": "nyc --reporter=text --reporter=lcov npm run mocha",
     "version": "auto-changelog -p && git add CHANGELOG.md"
   },
   "engines": {
-    "node": ">=8.0.0"
+    "node": ">=14.0.0"
   },
   "license": "MIT"
 }
